--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -31,7 +31,12 @@
     "incorrectLimit": "Значення має бути позитивним цілим",
     "meterTypes": "Типи лічільників",
     "diffCalc": "Різниця значень",
-    "diffCalcDescr": "Обчислюе різницю значень виразів. значення сортуються за датою",
+    "diffCalcDescr": "Обчислюе різницю значень. значення сортуються за датою",
     "prodCostCalc1": "Витрати з лімітами",
-    "prodCostDescr1": "Обчислюе сумму витрат за кожним лімітом"
+    "prodCostDescr1": "Обчислюе сумму витрат за кожним лімітом",
+    "prodCostMaxLimCalc": "Витрати з лімітами 2",
+    "prodCostMaxLimDescr": "Обчислюе сумму витрат за досягнутим лімітом",
+    "inDays": "за дні",
+    "avaragePerDay": "В середньому за день",
+    "reachedLimit": "Досягнутий ліміт"
 }
